--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "nelson10"
+  github           : "https://github.com/nelson10"
   google_plus      :
   keybase          :
   instagram        :
