--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://co.linkedin.com/in/nelson-d%C3%ADaz-92708651"
   orcid            : "https://orcid.org/0000-0003-3931-0199"
   pinterest        :
   soundcloud       :
