--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Nelson Diaz"
 title_separator          : "-"
 name                     : &name "Nelson Diaz"
 description              : &description "description"
-url                      : https://nelson10.github.io/NelsonDiaz.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://nelson10.github.io/nelson10.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "nelson10.github.io/NelsonDiaz.github.io/"
+repository               : "nelson10.github.io/nelson10.github.io/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
