--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ph.D Nelson Díaz"
   avatar           : "profile.png"
-  bio              : "Nelson Díaz, contact information: nelson.diaz@pucv.cl"
+  bio              : "Nelson Díaz, contact information: nelson [dot] diaz [at] pucv [dot] cl"
   location         : "Location"
   employer         :
   pubmed           : 
