--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio: Code"
+  - title: "Repository"
     url: /portfolio/
         
  # - title: "Blog Posts"
