--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ph.D Nelson Díaz"
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "Nelson Díaz, contact information: nelson [dot] diaz [at] pucv [dot] cl"
   location         : #"Location"
   employer         :
