--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ph.D Nelson Díaz"
+  name             : "Dr. Nelson Díaz"
   avatar           : "profile.jpeg"
   bio              : "Nelson Díaz, contact information: nelson [dot] diaz [at] pucv [dot] cl"
   location         : #"Location"
