--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /portfolio/
         
   - title: "News"
-    url: /news/
+    url: year-archive/
     
   - title: "CV"
     url: /cv/
