--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Repository"
+  - title: "Code"
     url: /portfolio/
         
   - title: "News"
