--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Nelson Díaz, contact information: nelson [dot] diaz [at] pucv [dot] cl"
   location         : #"Location"
   employer         :
-  pubmed           : 
+  pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=D%C3%ADaz+N&cauthor_id=35209268"
   googlescholar    : "https://scholar.google.es/citations?user=JQXNzLUAAAAJ&hl=en"
   email            : "nelson.diaz@pucv.cl"
   researchgate     : "https://www.researchgate.net/profile/Nelson-Diaz-4"
