--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "nelson10"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/nelson_diaz_diaz/"
+  instagram        : "nelson_diaz_diaz/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "nelson-diaz-92708651"
